Removed extra main tags from the home-page and fixed carousel items size jumping

--- a/home.sass
+++ b/home.sass
@@ -125,7 +125,7 @@ $feature-box-div-margin-bottom: 40px
             img
                 height: 60px
                 margin-bottom: 20px
-            main
+            main, div.main-div
                 display: flex
                 flex-wrap: wrap
                 flex-direction: row
@@ -325,6 +325,7 @@ $feature-box-div-margin-bottom: 40px
                     overflow: hidden
                     .owl-stage
                         .owl-item
+                            min-height: 420px
                             .item-image
                                 box-shadow: unset
                 .owl-nav
@@ -661,10 +662,10 @@ $feature-box-div-margin-bottom: 40px
             #vendorStrip
                 display: block
         section, header
-            main
+            main, div.main-div
                 max-width: 1400px
         footer
-            main
+            main, div.main-div
                 max-width: 1400px
         #overflow
             #manage, #react
